--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7-rc.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
