--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "graphql": "^16.8.1",
+    "nestjs-zod": "^3.0.0",
     "prisma": "^5.12.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7-rc.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
