--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7-rc.0",
+    "type-fest": "^4.15.0",
     "typeorm": "^0.3.20",
     "zod": "^3.22.5"
   },
