--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^5.12.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dataloader": "^2.2.2",
     "graphql": "^16.8.1",
     "nestjs-zod": "^3.0.0",
     "prisma": "^5.12.1",
